@@ -32,6 +32,7 @@
         <string-array name="prefs_layout_values">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
     </string-array>    
     
    <string name="prefs_speed_key">compass.speed</string>
